modified getSuggestGames